# Antidotes

./: .gitignore  .travis.yml  README.md  assistance.pyw  interactor.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
antidote/: interactor.py
antidote/core/: __init__.py  anti_saycheese.py  scanner.py
antidotes/: __init__.py  assistance.pyw  interactor.py
antidotes/core/: anti_saythanks.py  anti_shellphish.py  anti_whatsphish.py  connection_manager.py  scanner.py
core/: anti_zshadow.py  connection_manager.py  scanner.py
