[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "antidote"
author = "Author"
author-email = "author email"
home-page = "project home page"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires = ["beautifulsoup4", "requests", "Pillow", "notify2"]
requires-python=">=3.7"
description-file="README.md"

[tool.flit.metadata.requires-extra]
dev = ["flit"]

[tool.flit.scripts]
antidote = "antidote.interactor:main"
