[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "antidotes"
author = "0x0is1"
author-email = "0x0is1@protonmail.com"
home-page = "https://github.com/StrinTH/Antidote"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires = ["beautifulsoup4", "requests", "Pillow", "notify2"]
requires-python=">=3.7"
description-file="README.md"

[tool.flit.metadata.requires-extra]
dev = ["flit"]

[tool.flit.scripts]
antidotes = "antidotes.interactor:main"
